# audio-meta

./: .gitignore  ARCHITECTURE_CLEANUP_TODO.md  LICENSE  README.md  TODO.md  config.sample.yaml  mypy.ini  pyproject.toml
.claude/: settings.local.json
audio_meta/: __init__.py  album_batching.py  app.py  assignment.py  assignment_diagnostics.py  audit.py  cache.py  classical.py  cli.py  config.py  daemon.py  daemon_types.py  deferred.py  determinism.py  directory_identity.py  fs_utils.py  heuristics.py  identity.py  identity_old.py  match_utils.py  meta_keys.py  models.py  organizer.py  prompt_io.py  prompting.py  release_home.py  release_prompt.py  release_scoring.py  release_selection.py  scanner.py  services.py  singleton.py  tagging.py  validation.py  watchdog_handler.py
docs/: CLEANUP_COMPLETE.md  DEVELOPMENT.md  DOCUMENTATION_CLEANUP.md  PIPELINE.md  README.md  REFACTOR_TODO.md  SESSION_COMPLETE.md  TESTCASES.md
systemd/: audio-meta.service
tests/: test_album_batching.py  test_assignment.py  test_assignment_diagnostics.py  test_canonical_fixes.py  test_classical_credits_review.py  test_classical_heuristics.py  test_core_matching.py  test_core_scanner.py  test_directory_identity.py  test_discogs_candidates_synthetic_sample_meta.py  test_doctor_command.py  test_exported_release_selection_fixtures.py  test_fingerprint_mismatch_policy.py  test_fs_utils.py  test_full_integration.py  test_interactive_prompt_rendering.py  test_match_utils_outliers.py  test_models_trackmetadata_serialization.py  test_musicbrainz_candidate_support.py  test_musicbrainz_identity.py  (+17 more)
(+84 files in other folders)
